--- a/frontend/Rank-Up/src/app/participants/participants.page.scss
+++ b/frontend/Rank-Up/src/app/participants/participants.page.scss
@@ -50,3 +50,106 @@ ion-list{
     margin-top: 1vh;
     margin-left: 5vh;
 }
+.switch {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 4vh;
+    margin-bottom: 1vh;
+    border-radius: 25px;
+    height: 5vh;
+    width: 90%;
+    background-color: var(--ion-color-user);
+}
+
+.selected {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 25px;
+    height: 4vh;
+    width: 18vh;
+    background-color: var(--ion-color-white);
+}
+
+.notSelected {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    height: 4vh;
+    width: 18vh;
+}
+
+.imgUser {
+    width: 6vh;
+    height: 6vh;
+    border-radius: 12px;
+    margin-right: 2vh;
+}
+
+.listBox {
+    width: 90%;
+    height: 53vh;
+    overflow: hidden;
+    overflow-y: scroll;
+    background-color: transparent;
+}
+
+.list {
+    background-color: transparent;
+}
+
+.item {
+    margin-top: 1vh;
+    --background: var(--ion-color-grey);
+    --border-radius: 25px;
+}
+
+.nomeUtente {
+    font-size: 20px;
+    font-family: 'Outfit';
+    --color: var(--ion-color-black);
+}
+
+ion-item-options {
+    border-radius: 25px;
+    overflow: hidden;
+    background: transparent;
+
+    ion-item-option {
+        background: transparent;
+    }
+}
+
+ion-searchbar {
+    --box-shadow: none;
+    --background: var(--ion-color-grey);
+    --border-radius: 25px;
+
+    margin-top: 1vh;
+    width: 85%;
+    padding: 0;
+
+    background: transparent !important;
+}
+
+.change {
+    margin-top: 3vh;
+}
+
+ion-segment {
+    --background: var(--ion-color-admin);
+    border-radius: 28px;
+
+    width: 250px;
+}
+
+ion-segment-button {
+    --border-radius: 28px;
+}
