--- a/frontend/Rank-Up/src/app/admin-prizes-page/admin-prizes-page.page.html
+++ b/frontend/Rank-Up/src/app/admin-prizes-page/admin-prizes-page.page.html
@@ -5,7 +5,7 @@
       <ion-icon name="arrow-back-outline" size="large" color="dark"></ion-icon>
     </ion-button>
 
-    <ion-button class="rightIcon" fill="clear">
+    <ion-button class="rightIcon" fill="clear" [routerLink] = "['/create-prize']">
       <ion-icon name="add-circle-outline" size="large" color="dark"></ion-icon>
     </ion-button>
 
