--- a/frontend/Rank-Up/src/app/task-rejected/task-rejected.page.html
+++ b/frontend/Rank-Up/src/app/task-rejected/task-rejected.page.html
@@ -5,16 +5,16 @@
       <ion-icon name="arrow-back" size="large"></ion-icon>
     </ion-button>
 
-    <h1 align="center" class="Title">Task di [nome utente]<p>rifiutato</p>
+    <h1 align="center" class="title">Task di [nome utente]<p>rifiutato</p>
     </h1>
 
     <app-admin-element-bar class="taskbar" [buttonText] = "'Task'" [labelText]="'[nome Task]'"></app-admin-element-bar>
     <app-admin-element-bar class="pointsbar" [buttonText] = "'Punti'" [labelText]="'[punti]'"></app-admin-element-bar>
 
-      <ion-textarea class="descriptionArea" fill="outline" placeholder="Descrizione" shape="round" [readonly] = true></ion-textarea>
-      <ion-textarea class="descriptionArea" fill="outline" placeholder="Commento [nome admin]" shape="round" [readonly] = true></ion-textarea>
+      <ion-textarea id="descriptionArea" fill="outline" placeholder="     Descrizione" shape="round" [readonly] = true></ion-textarea>
+      <ion-textarea class="descriptionArea" fill="outline" placeholder="     Commento [nome admin]" shape="round" [readonly] = true></ion-textarea>
 
-      <app-bt-admin-small id="present-alert" class="viewAttached" [text]="'Visualizza allegato'"></app-bt-admin-small>
+      <app-bt-admin-small class="viewAttached" [text]="'Visualizza allegato'"></app-bt-admin-small>
       <app-bt-admin-small class="close" [text]="'Chiudi'"></app-bt-admin-small>
 
   </div>
