added links create team rules tasks

--- a/frontend/Rank-Up/src/app/team-rules-tasks/team-rules-tasks.page.html
+++ b/frontend/Rank-Up/src/app/team-rules-tasks/team-rules-tasks.page.html
@@ -5,10 +5,10 @@
     <div *ngSwitchCase="'rules'" class="backgroundAdmin">
 
       <ion-button class="leftIcon"  [routerLink]="['/admin/admin-home-team']">
-        <ion-icon name="arrow-back-outline" class="iconaBack"></ion-icon>
+        <ion-icon name="arrow-back-outline" class="iconaBack" size="large"></ion-icon>
       </ion-button>
 
-      <ion-button class="rightIcon">
+      <ion-button class="rightIcon" [routerLink] = "['/create-rule']">
         <ion-icon name="add-circle-outline" size="large"></ion-icon>
       </ion-button>
 
