added links create rule

--- a/frontend/Rank-Up/src/app/create-rule/create-rule.page.html
+++ b/frontend/Rank-Up/src/app/create-rule/create-rule.page.html
@@ -17,7 +17,7 @@
       <ion-textarea fill="outline" placeholder="Descrizione"></ion-textarea>
 
       <div class="create-rule-button">
-        <app-bt-admin-small text="Crea Regola"></app-bt-admin-small>
+        <app-bt-admin-small text="Crea Regola" [routerLink] = "['/admin/team-rules-tasks']"></app-bt-admin-small>
       </div>
     </div>
   
