--- a/frontend/Rank-Up/src/app/request-history/request-history.page.html
+++ b/frontend/Rank-Up/src/app/request-history/request-history.page.html
@@ -2,13 +2,13 @@
   <div class="backgroundAdmin">
     
     <ion-button class="leftIcon" fill="clear">
-      <ion-icon name="arrow-back-outline" class="iconaBack"></ion-icon>
+      <ion-icon name="arrow-back-outline" class="iconaBack" size="large"></ion-icon>
     </ion-button>
 
     <h1 class="title">Storico Richieste</h1>
 
-    <ion-button (click)="presentAlert()" class="optionIcon" fill="clear">
-      <ion-icon slot="icon-only" name="options-outline"></ion-icon>
+    <ion-button (click)="presentAlert()" class="rightIcon" fill="clear">
+      <ion-icon slot="icon-only" name="options-outline" size="large"></ion-icon>
     </ion-button>
 
     <div align="center" class="searchbar">
