--- a/frontend/Rank-Up/src/app/participants/participants.page.html
+++ b/frontend/Rank-Up/src/app/participants/participants.page.html
@@ -31,8 +31,7 @@
 
     <div class="listBox" *ngIf="stato">
       <ion-list class="list" lines="none">
-        <ion-item-sliding *ngFor="let item of [].constructor(4); let i = index"
-          [routerLink]="['/admin/admin-profile']">
+        <ion-item-sliding *ngFor="let item of [].constructor(4); let i = index">
           <ion-item class="item">
 
             <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
@@ -51,8 +50,7 @@
 
     <div class="listBox" *ngIf="!stato">
       <ion-list class="list" lines="none">
-        <ion-item-sliding *ngFor="let item of [].constructor(14); let i = index"
-          [routerLink]="['/admin/admin-profile']">
+        <ion-item-sliding *ngFor="let item of [].constructor(14); let i = index">
           <ion-item class="item">
 
             <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
