upgrade task complited

--- a/frontend/Rank-Up/src/app/task-completed/task-completed.page.html
+++ b/frontend/Rank-Up/src/app/task-completed/task-completed.page.html
@@ -3,7 +3,7 @@
   <div class="back">
     
     <ion-button class="leftIcon">
-      <ion-icon name="arrow-back-outline" class="iconaBack"></ion-icon>
+      <ion-icon name="arrow-back-outline" class="iconaBack" size="large"></ion-icon>
     </ion-button>
 
     <h1 align="center" class="task">Task completato <br> da [nome utente]</h1>
@@ -12,7 +12,7 @@
    <app-user-element-bar [labelText]="'punti'" [buttonText]="'Punti'" class="punti"></app-user-element-bar>
    
     <ion-textarea  fill="outline" placeholder="Descrizione" shape="round" [readonly] = true class="descrizione"></ion-textarea>
-    <ion-textarea  fill="outline" placeholder="Commento [nome admin]" shape="round" [readonly] = true class=""></ion-textarea>
+    <ion-textarea  fill="outline" placeholder="Commento [nome admin]" shape="round" [readonly] = true class="commento"></ion-textarea>
 
     <ion-grid>
       <ion-row>
