--- a/frontend/Rank-Up/src/app/task-completed/task-completed.page.scss
+++ b/frontend/Rank-Up/src/app/task-completed/task-completed.page.scss
@@ -17,15 +17,27 @@
     width: 100%;
 }
   
-.task1{
+.taskbar {
+  --background: var(--ion-color-grey);
+  font-size: 22px;
+  --border-radius: 28px;
+
+  height: 64px;
+  width: 90%;
   margin-top: 7vh;
- 
-  margin-left: 2vh;
+  margin-left: 3vh;
+
 }
-.punti{
+.pointsbar {
+  --background: var(--ion-color-grey);
+  font-size: 22px;
+  --border-radius: 28px;
+
+  height: 64px;
+  width: 90%;
   margin-top: 2vh;
   
-  margin-left: 2vh;
+  margin-left: 3vh;
 }
 .descrizione{
   border: solid 3px var(--ion-color-grey);
@@ -44,4 +56,17 @@
   width: 80%;
   margin-top: 4vh;
   margin-left: 5vh;
+}
+.close{
+  position: absolute;
+
+  margin-top: 88vh;
+  margin-left: 50%;
+}
+.viewAttached{
+  position: absolute;
+
+  margin-top: 88vh;
+  margin-right: 50%;
+
 }
