--- a/frontend/Rank-Up/src/app/user-rule-completed/user-rule-completed.page.scss
+++ b/frontend/Rank-Up/src/app/user-rule-completed/user-rule-completed.page.scss
@@ -1,18 +1,7 @@
-
 .task{
-    margin-top: 9vh;
-  color: black;
-  font-weight: bold;
-  }
-  
-ion-textarea{
-  border: solid 3px var(--ion-color-grey);
-  border-radius: 30px;
-
-  height: 18vh;
-  width: 80%;
-
-  margin-top: 2vh;
+  margin-top: 9vh;
+color: black;
+font-weight: bold;
 }
 .back {
   background-image: url("../../assets/image/backgroundUser.svg");
@@ -27,32 +16,56 @@ ion-textarea{
   width: 100%;
 }
 
-.regola{
-  margin-top: 7vh;
-  width: 40vh;
-  margin-left: 2vh;
-}
-.punti{
-  margin-top: 2vh;
-  width: 40vh;
-  margin-left: 2vh;
-}
+.taskbar {
+--background: var(--ion-color-grey);
+font-size: 22px;
+--border-radius: 28px;
 
+height: 64px;
+width: 90%;
+margin-top: 7vh;
+margin-left: 3vh;
+
+}
+.pointsbar {
+--background: var(--ion-color-grey);
+font-size: 22px;
+--border-radius: 28px;
+
+height: 64px;
+width: 90%;
+margin-top: 2vh;
+
+margin-left: 3vh;
+}
 .descrizione{
-  border: solid 3px var(--ion-color-grey);
-  border-radius: 30px;
+border: solid 3px var(--ion-color-grey);
+border-radius: 30px;
 
-  height: 18vh;
-  width: 80%;
-  margin-top: 4vh;
-  margin-left: 5vh;
+height: 18vh;
+width: 80%;
+margin-top: 4vh;
+margin-left: 5vh;
 }
 .commento{
-  border: solid 3px var(--ion-color-grey);
-  border-radius: 30px;
+border: solid 3px var(--ion-color-grey);
+border-radius: 30px;
 
-  height: 18vh;
-  width: 80%;
-  margin-top: 4vh;
-  margin-left: 5vh;
+height: 18vh;
+width: 80%;
+margin-top: 4vh;
+margin-left: 5vh;
+}
+.close{
+position: absolute;
+
+margin-top: 88vh;
+margin-left: 50%;
+}
+.viewAttached{
+position: absolute;
+
+margin-top: 88vh;
+margin-right: 50%;
+
 }
