--- a/frontend/Rank-Up/src/app/completed-task/completed-task.page.html
+++ b/frontend/Rank-Up/src/app/completed-task/completed-task.page.html
@@ -1,8 +1,8 @@
 <ion-content [fullscreen]="true">
   <div class="backgroundAdmin">
 
-    <ion-button class="leftIcon">
-      <ion-icon name="arrow-back" size="large" class="iconaNotifiche"></ion-icon>
+    <ion-button class="leftIcon" [routerLink]="['/admin/request-history']">
+      <ion-icon name="arrow-back" size="large"></ion-icon>
     </ion-button>
 
     <h1 align="center" class="title">Task completato da
@@ -16,7 +16,7 @@
       <ion-textarea class="descriptionArea" fill="outline" placeholder="     Commento [nome admin]" shape="round" [readonly] = true></ion-textarea>
 
       <app-bt-admin-small id="present-alert" class="viewAttached" [text]="'Visualizza allegato'"></app-bt-admin-small>
-      <app-bt-admin-small class="close" [text]="'Chiudi'"></app-bt-admin-small>
+      <app-bt-admin-small class="close" [text]="'Chiudi'" [routerLink]="['/admin/request-history']"></app-bt-admin-small>
 
   </div>
 </ion-content>
