--- a/frontend/Rank-Up/src/app/team-rules-tasks/team-rules-tasks.page.html
+++ b/frontend/Rank-Up/src/app/team-rules-tasks/team-rules-tasks.page.html
@@ -8,7 +8,7 @@
         <ion-icon name="arrow-back-outline" class="iconaBack"></ion-icon>
       </ion-button>
 
-      <ion-button class="rightIcon">
+      <ion-button class="rightIcon" [routerLink]="['/create-rule']">
         <ion-icon name="add-circle-outline" size="large"></ion-icon>
       </ion-button>
 
@@ -38,11 +38,11 @@
 
     <div *ngSwitchCase="'tasks'" class="backgroundAdmin">
 
-      <ion-button class="leftIcon" size="large">
+      <ion-button class="leftIcon" size="large" [routerLink]="['/admin/admin-home-team']">
         <ion-icon name="arrow-back-outline" class="iconaBack"></ion-icon>
       </ion-button>
 
-      <ion-button class="rightIcon">
+      <ion-button class="rightIcon" [routerLink]="['/create-rule']">
         <ion-icon name="add-circle-outline" size="large"></ion-icon>
       </ion-button>
 
