bug fix create-task-page

--- a/frontend/Rank-Up/src/app/create-task/create-task.page.scss
+++ b/frontend/Rank-Up/src/app/create-task/create-task.page.scss
@@ -39,7 +39,7 @@ ion-textarea {
     width: 100%;
     font-size: 16px;
     height: 64px;
-    color: var(--ion-color-grey);
+    color: var(--ion-color-black);
 }
 
 .internal-div {
