--- a/frontend/Rank-Up/src/app/prizes-page/prizes-page.page.scss
+++ b/frontend/Rank-Up/src/app/prizes-page/prizes-page.page.scss
@@ -13,14 +13,15 @@
 }
 
 #div-points {
+    font-size: 22px;
     margin-top: 4vh;
     color: var(--ion-color-black);
 }
 
 #div-title-prizes {
     margin-top: 0.5vh;
-    padding-right: 230px;
-    
+    width: 70%;
+    font-size: 22px;
     color: var(--ion-color-black);
     left: 0;
 }
@@ -55,16 +56,18 @@
     padding-left: 5vw;
     display: flex;
     align-items: center;
+    font-size: 20px;
 }
 
 #div-div-prizes-button {
     --background: var(--ion-color-user);
+    color: var(--ion-color-black);
     font-size: 2vh;
     --border-radius: 28px;
 
     height: 8vh;
     width: 40%;
-
+    font-size: 20px;
     margin: 0;
     margin-right: -10;
     top: 0;
@@ -76,6 +79,8 @@
     --background-color: var(--ion-color-admin);
     font-size: 2vh;
     --border-radius: 28px;
+    color: var(--ion-color-black);
+    font-size: 20px;
 
     height: 8vh;
     width: 40%;
