fixed back arrow in team page

--- a/frontend/Rank-Up/src/app/home/home.page.html
+++ b/frontend/Rank-Up/src/app/home/home.page.html
@@ -2,7 +2,7 @@
   <div class="backgroundUser">
 
     <ion-button class="leftIcon" [routerLink]="['/user/notifications']">
-      <ion-icon name="notifications-outline" size="large" class="iconaNotifiche"></ion-icon>
+      <ion-icon name="notifications-outline" size="large"></ion-icon>
     </ion-button>
 
     <ion-button class="rightIcon" [routerLink]="['/user/search-team']">
