--- a/frontend/Rank-Up/src/app/team/team.page.html
+++ b/frontend/Rank-Up/src/app/team/team.page.html
@@ -2,8 +2,8 @@
 
 <ion-content [fullscreen]="true">
     <div class="backgroundUser">
-        <ion-button class="leftIcon" size="large" [routerLink] = "['/user/home']">
-            <ion-icon name="arrow-back-outline" class="iconaBack"></ion-icon>
+        <ion-button class="leftIcon" [routerLink] = "['/user/home']">
+            <ion-icon name="arrow-back-outline" size="large" class="iconaBack"></ion-icon>
         </ion-button>
 
         <ion-button class="rightIcon" size="large" [routerLink] = "['/user/user-team-profile']">
