--- a/frontend/Rank-Up/src/app/admin-home-team/admin-home-team.page.html
+++ b/frontend/Rank-Up/src/app/admin-home-team/admin-home-team.page.html
@@ -1,8 +1,8 @@
 <ion-content [fullscreen]="true">
   <div class="backgroundAdmin">
     
-    <ion-button class="leftIcon" fill="clear" size="large" [routerLink] = "['/user/home']">
-      <ion-icon name="arrow-back-outline" class="iconaBack"></ion-icon>
+    <ion-button class="leftIcon" fill="clear" [routerLink] = "['/user/home']">
+      <ion-icon name="arrow-back-outline" size="large" class="iconaBack"></ion-icon>
     </ion-button>
 
     <div>
@@ -10,8 +10,8 @@
       <h4 class="subtitle">Codice: [codice team]</h4>
     </div>
     
-    <ion-button class="rightIcon" fill="clear" size="large" [routerLink] = "['/admin-team-settings']">
-      <ion-icon slot="icon-only" name="settings-outline"></ion-icon>
+    <ion-button class="rightIcon" fill="clear" [routerLink] = "['/admin-team-settings']">
+      <ion-icon slot="icon-only" name="settings-outline" size="large"></ion-icon>
     </ion-button>
     
     <div>
