upgrade participants page

--- a/frontend/Rank-Up/src/app/participants/participants.page.scss
+++ b/frontend/Rank-Up/src/app/participants/participants.page.scss
@@ -8,84 +8,6 @@
     margin-top: -1vh;
 }
 
-.nome{
-    margin-top: 1vh;
-    margin-left: 10vh;
-}
-
-.icon{
-    margin-top: 2vh;
-    margin-bottom: 2vh;
-    margin-left: 2vh;
-}
-
-.choseUser {
-    margin-top: 2vh;
-    --background: var(--ion-color-user);
-    border-radius: 28px;
-
-    width: 75%;
-
-    ion-segment-button {
-        --border-radius: 28px;
-    }
-}
-
-ion-list{
-  margin-top: 3vh;
-}
-
-.item {
-  width: 40vh;
-  margin-top: 1vh;
-  --background: var(--ion-color-grey);
-  --border-radius: 25px;
-}
-
-.list {
-  background-color: transparent;
-}
-
-.nome1{
-    margin-top: 1vh;
-    margin-left: 5vh;
-}
-.switch {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
-    margin-top: 4vh;
-    margin-bottom: 1vh;
-    border-radius: 25px;
-    height: 5vh;
-    width: 90%;
-    background-color: var(--ion-color-user);
-}
-
-.selected {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
-    border-radius: 25px;
-    height: 4vh;
-    width: 18vh;
-    background-color: var(--ion-color-white);
-}
-
-.notSelected {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
-    height: 4vh;
-    width: 18vh;
-}
-
 .imgUser {
     width: 6vh;
     height: 6vh;
@@ -144,12 +66,22 @@ ion-searchbar {
 }
 
 ion-segment {
-    --background: var(--ion-color-admin);
-    border-radius: 28px;
-
-    width: 250px;
+    --background: var(--ion-color-user);
+    border-radius: 3vh;
+    padding-top: 0.4vh;
+    padding-bottom: 0.3vh;
+    padding-left: 0.4vh;
+    padding-right: 0.4vh;
+    margin-top: 2vh;
+    width: 38vh;
+    height: 5vh;
 }
 
 ion-segment-button {
-    --border-radius: 28px;
+    --border-radius: 3vh;
+    height: 3.75vh;
+}
+
+.segmentText {
+    font-size: 1.9vh;
 }
