--- a/frontend/Rank-Up/src/app/request-history/request-history.page.html
+++ b/frontend/Rank-Up/src/app/request-history/request-history.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true">
   <div class="backgroundAdmin">
-    
+
     <ion-button class="leftIcon" fill="clear">
       <ion-icon name="arrow-back-outline" class="iconaBack" size="large"></ion-icon>
     </ion-button>
@@ -11,7 +11,7 @@
       <ion-icon slot="icon-only" name="options-outline" size="large"></ion-icon>
     </ion-button>
 
-    <div align="center" class="searchbar">
+    <div slot="start" class="searchbar">
       <app-search-bar></app-search-bar>
     </div>
 
@@ -37,7 +37,7 @@
         <ion-label class="nomeattivita">[nome attività]</ion-label>
         <ion-label class="data">[data]</ion-label>
       </ion-item>
-      
+
     </ion-list>
 
   </div>
