--- a/frontend/Rank-Up/src/app/admin-rule-completed/admin-rule-completed.page.html
+++ b/frontend/Rank-Up/src/app/admin-rule-completed/admin-rule-completed.page.html
@@ -1,9 +1,9 @@
 
 <ion-content [fullscreen]="true">
   <div class="backgroundAdmin">
-    
+
     <ion-button class="leftIcon" fill="clear">
-      <ion-icon name="arrow-back-outline" class="iconaBack"></ion-icon>
+      <ion-icon name="arrow-back-outline" class="iconaBack" size="large"></ion-icon>
     </ion-button>
 
     <h1 class="title">Regola completata <br>da [nome utente]</h1>
@@ -11,8 +11,8 @@
     <app-admin-element-bar class="elementbar" [buttonText]="'Regola'" [labelText]="'[nome regola]'"></app-admin-element-bar>
     <app-admin-element-bar class="elementbar" [buttonText]="'[Punti]'" [labelText]="'[punti]'"></app-admin-element-bar>
 
-    <ion-textarea class="descriptionArea" fill="outline" placeholder="Descrizione" shape="round" [readonly] = true></ion-textarea>
-    <ion-textarea class="commentArea" fill="outline" placeholder="Commento [nome admin]" shape="round" [readonly] = true></ion-textarea>
+    <ion-textarea class="descriptionArea" fill="outline" placeholder="      Descrizione" shape="round" [readonly] = true></ion-textarea>
+    <ion-textarea class="commentArea" fill="outline" placeholder="     Commento [nome admin]" shape="round" [readonly] = true></ion-textarea>
 
     <ion-grid>
       <ion-row>
