--- a/frontend/Rank-Up/src/app/notifications/notifications.page.scss
+++ b/frontend/Rank-Up/src/app/notifications/notifications.page.scss
@@ -1,9 +1,3 @@
-.title {
-    margin-top: 12vh;
-    color: black;
-    font-weight: bold;
-}
-
 .chose-bar {
     padding-top: 10vh;
 }
@@ -36,25 +30,35 @@
 }
 
 .choseUser {
-    margin-top: 10vh;
-    --background: var(--ion-color-user);
-    border-radius: 28px;
+  margin-top: 10vh;
+  margin-bottom: 5vh;
+  --background: var(--ion-color-user);
+  border-radius: 3vh;
 
-    width: 75%;
-    
-    ion-segment-button {
-        --border-radius: 28px;
-    }
+  width: 38vh;
+  height: 5vh;
+
+  ion-segment-button {
+    --border-radius: 3vh;
+    min-height: 2px !important;
+    margin: 0.5vh;
+    font-size: 1.9vh;
+  }
 }
 
 .choseAdmin {
-    margin-top: 10vh;
-    --background: var(--ion-color-admin);
-    border-radius: 28px;
+  margin-top: 10vh;
+  margin-bottom: 5vh;
+  --background: var(--ion-color-admin);
+  border-radius: 3vh;
 
-    width: 75%;
-    
-    ion-segment-button {
-        --border-radius: 28px;
-    }
+  width: 38vh;
+  height: 5vh;
+
+  ion-segment-button {
+    --border-radius: 3vh;
+    min-height: 2px !important;
+    margin: 0.5vh;
+    font-size: 1.9vh;
+  }
 }
