--- a/frontend/Rank-Up/src/app/user-notification-description/user-notification-description.page.html
+++ b/frontend/Rank-Up/src/app/user-notification-description/user-notification-description.page.html
@@ -7,7 +7,7 @@
 
     <h1 align="center" class="title">[Titolo notifica]</h1>
 
-    <h4 align="center" class="subtitle">[Data]</h4>
+    <h4 align="center" class="subtitle">[Data notifica]</h4>
 
     <ion-textarea fill="outline" placeholder="Descrizione" shape="round" [readonly] = true></ion-textarea>
   </div>
