--- a/frontend/Rank-Up/src/global.scss
+++ b/frontend/Rank-Up/src/global.scss
@@ -194,3 +194,10 @@ ion-modal {
 ion-modal ion-content {
     --background: var(--ion-color-grey);
 }
+
+.input {
+    background-color: none;
+    margin-bottom: 2vh;
+    color: black;
+    width: 100%;
+}
