--- a/frontend/Rank-Up/src/app/login/login.page.html
+++ b/frontend/Rank-Up/src/app/login/login.page.html
@@ -8,10 +8,8 @@
 
       <div class="form">
         <h3 class="titolo">Login</h3>
-        <!--app-input class="email" [type]="'email'" [placeholder]="'Email/Username'"></app-input>
-        <app-input class="password" [type]="'password'" [placeholder]="'Password'"></app-input-->
-        <ion-input [(ngModel)]="user.username" class="email" [type]="'email'" [placeholder]="'Username'"></ion-input>
-        <ion-input [(ngModel)]="user.password" class="password" [type]="'password'" [placeholder]="'Password'"></ion-input>
+        <ion-input [(ngModel)]="user.username" class="input" [type]="'email'" [placeholder]="'Username'" fill="outline" shape="round" mode="md"></ion-input>
+        <ion-input [(ngModel)]="user.password" class="input" [type]="'password'" [placeholder]="'Password'" fill="outline" shape="round" mode="md"></ion-input>
       </div>
 
       <app-bt-user-small class="loginButton" (click)="login()" [text]="'Accedi'"></app-bt-user-small>
