small bug fixes

--- a/frontend/Rank-Up/src/app/participants/participants.page.scss
+++ b/frontend/Rank-Up/src/app/participants/participants.page.scss
@@ -1,7 +1,7 @@
 .search{
-    margin-top: -2vh;
+    margin-top: 1vh;
     align-items: center;
-    width: 100%;
+    width: 85%;
 }
 
 .codice{
@@ -84,4 +84,8 @@ ion-segment-button {
 
 .segmentText {
     font-size: 1.9vh;
+}
+
+.title{
+    margin-top: 7vh;
 }
