upgrade participants page

--- a/frontend/Rank-Up/src/app/participants/participants.page.html
+++ b/frontend/Rank-Up/src/app/participants/participants.page.html
@@ -7,7 +7,7 @@
     </ion-button>
     <h1 align="center" class="title">Nome team</h1>
     <p class="codice" align="center">Codice :[Codice team]</p>
-    <div class="search" align="center">
+    <div class="search">
       <app-search-bar></app-search-bar>
     </div>
 
@@ -28,7 +28,7 @@
 
             <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
             <ion-label class="nomeUtente">Utente {{i+1}}</ion-label>
-            <h3>{{i+2*i}}</h3>
+            <h3 class="puntiUtente">{{i+2*i}}</h3>
 
           </ion-item>
           <ion-item-options side="end">
