--- a/frontend/Rank-Up/src/app/participants/participants.page.scss
+++ b/frontend/Rank-Up/src/app/participants/participants.page.scss
@@ -25,6 +25,7 @@
 
 .list {
     background-color: transparent;
+    margin-top: 2vh;
 }
 
 .item {
@@ -84,4 +85,7 @@ ion-segment-button {
 
 .segmentText {
     font-size: 1.9vh;
+}
+.puntiUtente{
+    margin-top: 0.8vh;
 }
