--- a/frontend/Rank-Up/src/global.scss
+++ b/frontend/Rank-Up/src/global.scss
@@ -195,7 +195,7 @@ ion-modal ion-content {
     --background: var(--ion-color-grey);
 }
 
-.input {
+.formInput {
     background-color: none;
     margin-bottom: 2vh;
     color: black;
